<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="#303F9F"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                style="@style/button1"
                android:text="@string/a0" />

            <TextView
                style="@style/text3"
                android:text="@string/a" />

            <Button
                android:id="@+id/FX"
                style="@style/button2"
                android:text="@string/a6" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                style="@style/image1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/u" />

            <TextView
                style="@style/text7"
                android:text="@string/a2" />
        </RelativeLayout>

        <TextView
            style="@style/text4"
            android:text="@string/a17" />

        <ImageView
            style="@style/image5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/k" />

        <TextView
            style="@style/text4"
            android:text="@string/a18" />

        <TextView
            style="@style/text5"
            android:text="@string/a19" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fa" />

        <TextView
            style="@style/text4"
            android:text="@string/a20" />

        <TextView
            style="@style/text5"
            android:text="@string/a21" />


        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fc" />

        <TextView
            style="@style/text4"
            android:text="@string/a22" />

        <TextView
            style="@style/text5"
            android:text="@string/a23" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fd" />

        <TextView
            style="@style/text4"
            android:text="@string/a24" />

        <TextView
            style="@style/text5"
            android:text="@string/a25" />


        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fe" />

        <TextView
            style="@style/text4"
            android:text="@string/a26" />

        <TextView
            style="@style/text5"
            android:text="@string/a27" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fb" />

        <TextView
            style="@style/text4"
            android:text="@string/a28" />

        <TextView
            style="@style/text5"
            android:text="@string/a29" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fg" />


        <TextView
            style="@style/text6"
            android:text="@string/a45" />


    </LinearLayout>

</ScrollView>