<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="#303F9F"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                style="@style/button1"
                android:text="@string/a0" />

            <TextView
                style="@style/text3"
                android:text="@string/a" />

            <Button
                android:id="@+id/FX"
                style="@style/button2"
                android:text="@string/a6" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                style="@style/image1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/t" />

            <TextView
                style="@style/text7"
                android:text="@string/a1" />
        </RelativeLayout>

        <TextView
            style="@style/text4"
            android:text="@string/a7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                style="@style/image3"
                android:contentDescription="@string/app_name"
                android:src="@drawable/y" />

            <ImageView
                style="@style/image2"
                android:contentDescription="@string/app_name"
                android:src="@drawable/e" />
        </LinearLayout>

        <TextView
            style="@style/text4"
            android:text="@string/a8" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/aa" />

        <TextView
            style="@style/text4"
            android:text="@string/a10" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bb" />

        <TextView
            style="@style/text4"
            android:text="@string/a11" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cc" />

        <TextView
            style="@style/text4"
            android:text="@string/a12" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dd" />

        <TextView
            style="@style/text4"
            android:text="@string/a13" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ee" />

        <TextView
            style="@style/text4"
            android:text="@string/a14" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ff" />

        <TextView
            style="@style/text5"
            android:text="@string/a15" />

        <TextView
            style="@style/text6"
            android:text="@string/a16" />

    </LinearLayout>


</ScrollView>