<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="#303F9F"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                style="@style/button1"
                android:text="@string/a0" />

            <TextView
                style="@style/text3"
                android:text="@string/a" />

            <Button
                android:id="@+id/FX"
                style="@style/button2"
                android:text="@string/a6" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                style="@style/image1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/po" />

            <TextView
                style="@style/text7"
                android:text="@string/a5" />
        </RelativeLayout>

        <TextView
            style="@style/text4"
            android:text="@string/a56" />


        <ImageView
            style="@style/image5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/e" />


        <TextView
            style="@style/text4"
            android:text="@string/a57" />


        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/da" />

        <TextView
            style="@style/text5"
            android:text="@string/a58" />


        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/db" />

        <TextView
            style="@style/text4"
            android:text="@string/a59" />


        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dc" />


        <TextView
            style="@style/text6"
            android:text="@string/a60" />
    </LinearLayout>
</ScrollView>