<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#303F9F"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:text="@string/a0"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/a"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/FX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="#00000000"
                android:text="@string/a6"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button3"
                style="@style/image1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ae" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/a3"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            style="@style/text4"
            android:text="@string/a46" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                style="@style/image2"
                android:contentDescription="@string/app_name"
                android:src="@drawable/y" />

            <ImageView
                style="@style/image3"
                android:contentDescription="@string/app_name"
                android:src="@drawable/af" />
        </LinearLayout>

        <TextView
            style="@style/text4"
            android:text="@string/a47" />

        <TextView
            style="@style/text5"
            android:text="@string/a9" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ab" />

        <TextView
            style="@style/text4"
            android:text="@string/a48" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ad" />

        <TextView
            style="@style/text4"
            android:text="@string/a49" />

        <ImageView
            style="@style/image1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ac" />

        <TextView
            style="@style/text6"
            android:text="@string/a50" />
    </LinearLayout>
</ScrollView>